feat(shopping list endpoint): removing docker-compose/sql,
